syntax = "proto3";
package pb;
option go_package = "./pb";
import "common.proto";

//GatewayGetUserConnectionReq 获取用户的连接 可以用userId、platforms、installIds过滤
message GatewayGetUserConnectionReq {
  RequestHeader header = 1;
  repeated string userIds = 2;
  repeated string platforms = 3;
  repeated string installIds = 4;
}

message GatewayGetUserConnectionResp {
  ResponseHeader commonResp = 1;
}

service gatewayService {
  rpc GatewayGetUserConnection(GatewayGetUserConnectionReq) returns (GatewayGetUserConnectionResp);
}
